kubernetes-istio-scripts/kubernetes/stateful-set/devops-rabbitmq.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  rabbitmq
